--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -73,4 +73,7 @@ cnoremap <C-k> <Up>
 " F7: Search highlight toggle
 map <F7> :noh<CR>
 
+" Ignore body onclick
+set hinttags="//*[name()!='BODY' and @onclick or @onmouseover or @onmousedown or @onmouseup or @oncommand or @class='lk' or @class='s'] | //input[not(@type='hidden')] | //a | //area | //iframe | //textarea | //button | //select | //xhtml:*[name()!='BODY' and @onclick or @onmouseover or @onmousedown or @onmouseup or @oncommand or @class='lk' or @class='s'] | //xhtml:input[not(@type='hidden')] | //xhtml:a | //xhtml:area | //xhtml:iframe | //xhtml:textarea | //xhtml:button | //xhtml:select"
+
 " vim:syn=vimperator:
