--- a/.irssi/config
+++ b/.irssi/config
@@ -1,113 +1,48 @@
 servers = (
-  { address = "irc.stealth.net"; chatnet = "IRCNet"; port = "6668"; },
-  { address = "irc.efnet.net"; chatnet = "EFNet"; port = "6667"; },
-  { 
-    address = "irc.undernet.org";
-    chatnet = "Undernet";
-    port = "6667";
-  },
-  { address = "irc.dal.net"; chatnet = "DALnet"; port = "6667"; },
-  { address = "irc.openprojects.net"; chatnet = "OPN"; port = "6667"; },
-  { address = "irc.gnome.org"; chatnet = "GIMPNet"; port = "6667"; },
-  { address = "irc.ptlink.net"; chatnet = "PTlink"; port = "6667"; },
-  { address = "silc.pspt.fi"; chatnet = "SILC"; port = "706"; },
   {
-    address = "irc.freenode.net";
+    address = "glacicle.com";
     chatnet = "freenode";
-    port = "6667";
+    port = "3330";
     autoconnect = "yes";
     nick = "GGLucas";
   },
   {
-    address = "irc.oftc.net";
+    address = "glacicle.com";
     chatnet = "oftc";
-    port = "6667";
+    port = "3331";
     autoconnect = "yes";
     nick = "GGLucas";
   },
   {
-    address = "irc.foonetic.net";
+    address = "glacicle.com";
     chatnet = "foonetic";
-    port = "6667";
+    port = "3332";
     autoconnect = "yes";
     nick = "GGLucas";
   },
   {
-    address = "irc.rizon.net";
+    address = "glacicle.com";
     chatnet = "rizon";
-    port = "6667";
+    port = "3333";
     autoconnect = "yes";
     nick = "GGLucas";
+  },
+  {
+    address = "freenode";
+    port = "0";
+    password = "3330";
+    use_ssl = "no";
+    ssl_verify = "no";
+    autoconnect = "yes";
   }
 );
 
 chatnets = {
-  IRCNet = {
-    type = "IRC";
-    max_kicks = "4";
-    max_modes = "3";
-    max_msgs = "5";
-    max_whois = "4";
-    max_query_chans = "5";
-  };
-  EFNet = { 
-    type = "IRC";
-    max_kicks = "4";
-    max_modes = "4";
-    max_msgs = "3";
-  };
-  Undernet = {
-    type = "IRC";
-    max_kicks = "4";
-    max_modes = "3";
-    max_msgs = "3";
-  };
-  DALNet = { 
-    type = "IRC";
-    max_kicks = "4";
-    max_modes = "6";
-    max_msgs = "3";
-  };
-  OPN = { type = "IRC"; max_kicks = "4"; max_modes = "4"; max_msgs = "1"; };
-  GIMPNet = {
-    type = "IRC";
-    max_kicks = "4";
-    max_modes = "4";
-    max_msgs = "3";
-  };
-  PTLink = {
-    type = "IRC";
-    max_kicks = "1";
-    max_modes = "6";
-    max_msgs = "100";
-  };
-  SILC = { type = "SILC"; };
   freenode = { type = "IRC"; };
   oftc = { type = "IRC"; };
   foonetic = { type = "IRC"; };
   rizon = { type = "IRC"; };
 };
-
-channels = (
-  { name = "#awesome"; chatnet = "oftc"; autojoin = "Yes"; },
-
-  { name = "#archlinux"; chatnet = "freenode"; autojoin = "Yes"; },
-  { name = "#lojban"; chatnet = "freenode"; autojoin = "Yes"; },
-  { name = "#vim"; chatnet = "freenode"; autojoin = "Yes"; },
-  { name = "#python"; chatnet = "freenode"; autojoin = "Yes"; },
-
-  { name = "#xkcd"; chatnet = "foonetic"; autojoin = "Yes"; },
-  { name = "#xkcd-signal"; chatnet = "foonetic"; autojoin = "Yes"; },
-  { name = "#curseofsteel"; chatnet = "foonetic"; autojoin = "Yes"; },
-
-  { name = "#doremi"; chatnet = "rizon"; autojoin = "Yes"; },
-  {
-    name = "#DLQCT";
-    password = "dlqct";
-    chatnet = "rizon";
-    autojoin = "Yes";
-  }
-);
 
 aliases = {
   J = "join";
@@ -263,13 +198,6 @@ statusbar = {
       items = {
         barstart = { priority = "100"; };
         awl_0 = { };
-        barend = { priority = "100"; alignment = "right"; };
-      };
-    };
-    awl_1 = {
-      items = {
-        barstart = { priority = "100"; };
-        awl_1 = { };
         barend = { priority = "100"; alignment = "right"; };
       };
     };
