--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -26,6 +26,7 @@ hotlist_short_names = on
 hotlist_sort = group_time_asc
 item_time_format = "%H:%M"
 jump_current_to_previous_buffer = on
+jump_previous_buffer_when_closing = on
 nickmode = on
 nickmode_empty = off
 paste_max_lines = 3
@@ -120,6 +121,7 @@ partial_completion_other = off
 display_default = 5
 max_commands = 100
 max_lines = 4096
+max_visited_buffers = 50
 
 [proxy]
 
@@ -201,21 +203,22 @@ buffer = "irc;foonetic.#xkcd;6"
 buffer = "irc;rizon.#doremi;7"
 buffer = "irc;foonetic.#xkcd-signal;8"
 buffer = "irc;freenode.#lojban;9"
-buffer = "irc;rizon.#DLQCT;10"
+buffer = "irc;freenode.#vim;10"
 buffer = "irc;freenode.#python;11"
-buffer = "irc;freenode.#vim;12"
-buffer = "irc;bitlbee.identica;13"
-buffer = "irc;foonetic.#curseofsteel;14"
-buffer = "irc;bitlbee.damy;15"
-buffer = "irc;freenode.#reddit;16"
-buffer = "irc;bitlbee.freek;17"
+buffer = "irc;foonetic.#curseofsteel;12"
+buffer = "irc;rizon.#DLQCT;13"
+buffer = "irc;freenode.#reddit;14"
+buffer = "irc;freenode.#uzbl;15"
+buffer = "irc;freenode.#vimperator;16"
+buffer = "irc;bitlbee.identica;17"
+buffer = "irc;bitlbee.ernst;18"
 window = "1;0;50;1;-;-"
 window = "2;1;50;0;-;-"
 window = "3;2;0;0;irc;foonetic.#xkcd"
 window = "4;2;0;0;irc;bitlbee.&bitlbee"
 window = "5;1;50;0;-;-"
 window = "6;5;0;0;irc;freenode.#archlinux"
-window = "7;5;0;0;irc;oftc.#awesome"
+window = "7;5;0;0;irc;bitlbee.identica"
 
 [notify]
 
