--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -196,29 +196,39 @@ title.type = window
 [layout]
 buffer = "core;weechat;1"
 buffer = "irc;servers;2"
-buffer = "irc;bitlbee.&bitlbee;3"
-buffer = "irc;freenode.#archlinux;4"
-buffer = "irc;oftc.#awesome;5"
-buffer = "irc;foonetic.#xkcd;6"
-buffer = "irc;rizon.#doremi;7"
+buffer = "irc;freenode.#archlinux;3"
+buffer = "irc;oftc.#awesome;4"
+buffer = "irc;foonetic.#xkcd;5"
+buffer = "irc;rizon.#doremi;6"
+buffer = "irc;oftc.#vimpression;7"
 buffer = "irc;foonetic.#xkcd-signal;8"
-buffer = "irc;freenode.#lojban;9"
-buffer = "irc;freenode.#vim;10"
-buffer = "irc;freenode.#python;11"
-buffer = "irc;foonetic.#curseofsteel;12"
-buffer = "irc;rizon.#DLQCT;13"
-buffer = "irc;freenode.#reddit;14"
-buffer = "irc;freenode.#uzbl;15"
-buffer = "irc;freenode.#vimperator;16"
-buffer = "irc;bitlbee.identica;17"
-buffer = "irc;bitlbee.ernst;18"
-window = "1;0;50;1;-;-"
-window = "2;1;50;0;-;-"
-window = "3;2;0;0;irc;foonetic.#xkcd"
-window = "4;2;0;0;irc;bitlbee.&bitlbee"
-window = "5;1;50;0;-;-"
-window = "6;5;0;0;irc;freenode.#archlinux"
-window = "7;5;0;0;irc;bitlbee.identica"
+buffer = "irc;rizon.#DLQCT;9"
+buffer = "irc;bitlbee.&bitlbee;10"
+buffer = "irc;freenode.#lojban;11"
+buffer = "irc;freenode.#vim;12"
+buffer = "irc;foonetic.#curseofsteel;13"
+buffer = "irc;freenode.#uzbl;14"
+buffer = "irc;freenode.#vimperator;15"
+buffer = "irc;bitlbee.joel_m;16"
+buffer = "irc;freenode.#python;17"
+buffer = "irc;bitlbee.identica;18"
+buffer = "irc;bitlbee.ernst;19"
+buffer = "irc;freenode.jelly12gen;20"
+window = "1;0;50;0;-;-"
+window = "2;1;50;1;-;-"
+window = "3;2;50;0;-;-"
+window = "4;3;0;0;irc;freenode.#archlinux"
+window = "5;3;0;0;irc;oftc.#awesome"
+window = "6;2;50;0;-;-"
+window = "7;6;0;0;irc;freenode.#vimperator"
+window = "8;6;0;0;irc;freenode.#python"
+window = "9;1;50;1;-;-"
+window = "10;9;50;0;-;-"
+window = "11;10;0;0;irc;foonetic.#xkcd"
+window = "12;10;0;0;irc;bitlbee.joel_m"
+window = "13;9;50;0;-;-"
+window = "14;13;0;0;irc;oftc.#vimpression"
+window = "15;13;0;0;irc;bitlbee.identica"
 
 [notify]
 
@@ -315,7 +325,7 @@ meta-cc = "/input delete_line"
 meta-d = "/input delete_next_word"
 meta-f = "/window page_down"
 meta-g = "/input insert /buffer #; /input delete_previous_char"
-meta-h = "/input hotlist_clear"
+meta-h = "/window left"
 meta-j01 = "/buffer 1"
 meta-j02 = "/buffer 2"
 meta-j03 = "/buffer 3"
@@ -420,11 +430,12 @@ meta-jmeta-p = "/input jump_previous_buffer"
 meta-jmeta-r = "/server raw"
 meta-jj = "/input history_next"
 meta-k = "/input history_previous"
-meta-n = "/window -1"
+meta-l = "/window right"
+meta-n = "/window up"
 meta-p = "/window scroll_previous_highlight"
 meta-r = "/input delete_line"
 meta-s = "/server switch"
-meta-t = "/window +1"
+meta-t = "/window down"
 meta-u = "/input scroll_unread"
 meta-v = "/buffer -1"
 meta-w = "/buffer +1"
