--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -22,6 +22,7 @@ highlight = ""
 hotlist_names_count = 3
 hotlist_names_length = 0
 hotlist_names_level = 12
+hotlist_names_merged_buffers = off
 hotlist_short_names = on
 hotlist_sort = group_time_asc
 item_time_format = "%H:%M"
@@ -33,6 +34,7 @@ paste_max_lines = 3
 prefix_action = " *"
 prefix_align = right
 prefix_align_max = 0
+prefix_buffer_align = right
 prefix_error = "=!="
 prefix_join = "-->"
 prefix_network = "--"
@@ -69,6 +71,7 @@ chat_nick_color10 = blue
 chat_nick_other = cyan
 chat_nick_self = white
 chat_prefix_action = white
+chat_prefix_buffer = brown
 chat_prefix_error = yellow
 chat_prefix_join = lightgreen
 chat_prefix_more = lightmagenta
@@ -108,7 +111,7 @@ status_number = yellow
 [completion]
 default_template = "%(nicks)|%(irc_channels)"
 nick_add_space = on
-nick_completor = ":"
+nick_completer = ":"
 nick_first_only = off
 nick_ignore_chars = "[]-^"
 partial_completion_alert = on
@@ -195,39 +198,40 @@ title.type = window
 
 [layout]
 buffer = "core;weechat;1"
-buffer = "irc;servers;2"
+buffer = "irc;server.freenode;1"
+buffer = "irc;server.oftc;1"
+buffer = "irc;server.foonetic;1"
+buffer = "irc;server.rizon;1"
+buffer = "irc;server.bitlbee;1"
+buffer = "irc;freenode.#lojban;2"
 buffer = "irc;freenode.#archlinux;3"
 buffer = "irc;oftc.#awesome;4"
-buffer = "irc;foonetic.#xkcd;5"
-buffer = "irc;rizon.#doremi;6"
-buffer = "irc;oftc.#vimpression;7"
-buffer = "irc;foonetic.#xkcd-signal;8"
+buffer = "irc;oftc.#vimperator;5"
+buffer = "irc;foonetic.#xkcd;6"
+buffer = "irc;freenode.#vim;7"
+buffer = "irc;rizon.#doremi;8"
 buffer = "irc;rizon.#DLQCT;9"
-buffer = "irc;bitlbee.&bitlbee;10"
-buffer = "irc;freenode.#lojban;11"
-buffer = "irc;freenode.#vim;12"
-buffer = "irc;foonetic.#curseofsteel;13"
-buffer = "irc;freenode.#uzbl;14"
-buffer = "irc;freenode.#vimperator;15"
-buffer = "irc;bitlbee.joel_m;16"
-buffer = "irc;freenode.#python;17"
-buffer = "irc;bitlbee.identica;18"
-buffer = "irc;bitlbee.ernst;19"
-buffer = "irc;freenode.jelly12gen;20"
+buffer = "irc;foonetic.#xkcd-signal;10"
+buffer = "irc;bitlbee.&bitlbee;11"
+buffer = "irc;foonetic.#curseofsteel;12"
+buffer = "irc;freenode.#python;13"
+buffer = "irc;freenode.#archlinux-offtopic;14"
+buffer = "irc;bitlbee.identica;15"
+buffer = "irc;bitlbee.ernst;16"
 window = "1;0;50;0;-;-"
 window = "2;1;50;1;-;-"
 window = "3;2;50;0;-;-"
 window = "4;3;0;0;irc;freenode.#archlinux"
 window = "5;3;0;0;irc;oftc.#awesome"
 window = "6;2;50;0;-;-"
-window = "7;6;0;0;irc;freenode.#vimperator"
+window = "7;6;0;0;irc;freenode.#archlinux-offtopic"
 window = "8;6;0;0;irc;freenode.#python"
 window = "9;1;50;1;-;-"
 window = "10;9;50;0;-;-"
 window = "11;10;0;0;irc;foonetic.#xkcd"
-window = "12;10;0;0;irc;bitlbee.joel_m"
+window = "12;10;0;0;irc;bitlbee.&bitlbee"
 window = "13;9;50;0;-;-"
-window = "14;13;0;0;irc;oftc.#vimpression"
+window = "14;13;0;0;irc;foonetic.#curseofsteel"
 window = "15;13;0;0;irc;bitlbee.identica"
 
 [notify]
