--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -206,30 +206,33 @@ buffer = "irc;server.bitlbee;1"
 buffer = "irc;freenode.#lojban;2"
 buffer = "irc;freenode.#archlinux;3"
 buffer = "irc;oftc.#awesome;4"
-buffer = "irc;oftc.#vimperator;5"
-buffer = "irc;foonetic.#xkcd;6"
+buffer = "irc;foonetic.#xkcd;5"
+buffer = "irc;oftc.#vimperator;6"
 buffer = "irc;freenode.#vim;7"
 buffer = "irc;rizon.#doremi;8"
-buffer = "irc;rizon.#DLQCT;9"
-buffer = "irc;foonetic.#xkcd-signal;10"
+buffer = "irc;foonetic.#xkcd-signal;9"
+buffer = "irc;rizon.#DLQCT;10"
 buffer = "irc;bitlbee.&bitlbee;11"
 buffer = "irc;foonetic.#curseofsteel;12"
 buffer = "irc;freenode.#python;13"
 buffer = "irc;freenode.#archlinux-offtopic;14"
 buffer = "irc;bitlbee.identica;15"
-buffer = "irc;bitlbee.ernst;16"
+buffer = "irc;freenode.#newsbeuter;16"
+buffer = "irc;bitlbee.joel_m;17"
+buffer = "irc;bitlbee.daniel;18"
+buffer = "irc;bitlbee.freek;19"
 window = "1;0;50;0;-;-"
 window = "2;1;50;1;-;-"
 window = "3;2;50;0;-;-"
-window = "4;3;0;0;irc;freenode.#archlinux"
-window = "5;3;0;0;irc;oftc.#awesome"
+window = "4;3;0;0;irc;freenode.#newsbeuter"
+window = "5;3;0;0;irc;freenode.#newsbeuter"
 window = "6;2;50;0;-;-"
 window = "7;6;0;0;irc;freenode.#archlinux-offtopic"
-window = "8;6;0;0;irc;freenode.#python"
+window = "8;6;0;0;irc;oftc.#awesome"
 window = "9;1;50;1;-;-"
 window = "10;9;50;0;-;-"
 window = "11;10;0;0;irc;foonetic.#xkcd"
-window = "12;10;0;0;irc;bitlbee.&bitlbee"
+window = "12;10;0;0;irc;bitlbee.joel_m"
 window = "13;9;50;0;-;-"
 window = "14;13;0;0;irc;foonetic.#curseofsteel"
 window = "15;13;0;0;irc;bitlbee.identica"
@@ -267,6 +270,7 @@ ctrl-U = "/input delete_beginning_of_line"
 ctrl-W = "/input delete_previous_word"
 ctrl-X = "/input delete_next_char"
 ctrl-Y = "/input clipboard_paste"
+meta-/ = "/window merge all"
 meta-0 = "/buffer 10"
 meta-1 = "/buffer 1"
 meta-2 = "/buffer 2"
