--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -206,19 +206,20 @@ buffer = "irc;server.bitlbee;1"
 buffer = "irc;freenode.#lojban;2"
 buffer = "irc;freenode.#archlinux;3"
 buffer = "irc;oftc.#awesome;4"
-buffer = "irc;bitlbee.&bitlbee;5"
-buffer = "irc;foonetic.#xkcd;6"
-buffer = "irc;rizon.#doremi;7"
+buffer = "irc;oftc.#vimperator;5"
+buffer = "irc;bitlbee.&bitlbee;6"
+buffer = "irc;foonetic.#xkcd;7"
 buffer = "irc;freenode.#vim;8"
 buffer = "irc;freenode.#python;9"
 buffer = "irc;freenode.#archlinux-offtopic;10"
 buffer = "irc;freenode.#newsbeuter;11"
-buffer = "irc;oftc.#vimperator;12"
-buffer = "irc;foonetic.#xkcd-signal;13"
-buffer = "irc;rizon.#DLQCT;14"
+buffer = "irc;rizon.#doremi;12"
+buffer = "irc;rizon.#DLQCT;13"
+buffer = "irc;foonetic.#xkcd-signal;14"
 buffer = "irc;foonetic.#curseofsteel;15"
-buffer = "irc;bitlbee.damy;16"
-buffer = "irc;bitlbee.joel_m;17"
+buffer = "irc;bitlbee.identica;16"
+buffer = "irc;bitlbee.ernst;17"
+buffer = "irc;bitlbee.daniel;18"
 window = "1;0;50;0;-;-"
 window = "2;1;50;1;-;-"
 window = "3;2;50;0;-;-"
@@ -230,10 +231,10 @@ window = "8;6;0;0;irc;freenode.#vim"
 window = "9;1;50;1;-;-"
 window = "10;9;50;0;-;-"
 window = "11;10;0;0;irc;foonetic.#xkcd"
-window = "12;10;0;0;irc;bitlbee.damy"
+window = "12;10;0;0;irc;bitlbee.&bitlbee"
 window = "13;9;50;0;-;-"
 window = "14;13;0;0;irc;foonetic.#curseofsteel"
-window = "15;13;0;0;irc;bitlbee.joel_m"
+window = "15;13;0;0;irc;bitlbee.identica"
 
 [notify]
 
