--- a/.screenrc
+++ b/.screenrc
@@ -29,11 +29,8 @@ term screen-256color
 # Don't show annoying bell messages
 bell_msg ""
 
-# Backtick commands
-backtick 42 0 100 ks 1
-
 # Statusline
-hardstatus alwayslastline '%{= G}[%{B} %M %d %{g}]%{g}[%= %{= w}%?%-Lw%?%{r}(%{W}%n*%f %t%?(%u)%?%{r})%{w}%?%+Lw%?%?%= %{g}][%{W} %c %{B}%42`%{g} ]'
+hardstatus alwayslastline '%{= G}[%{B} %M %d %{g}]%{g}[%= %{= w}%?%-Lw%?%{r}(%{W}%n*%f %t%?(%u)%?%{r})%{w}%?%+Lw%?%?%= %{g}][%{W} %c%{g} ]'
 activity '-'
 
 # Termcap, fix 256 colors
