--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -206,20 +206,21 @@ buffer = "irc;server.bitlbee;1"
 buffer = "irc;freenode.#lojban;2"
 buffer = "irc;freenode.#archlinux;3"
 buffer = "irc;oftc.#awesome;4"
-buffer = "irc;oftc.#vimperator;5"
-buffer = "irc;bitlbee.&bitlbee;6"
-buffer = "irc;foonetic.#xkcd;7"
+buffer = "irc;foonetic.#xkcd;5"
+buffer = "irc;oftc.#vimperator;6"
+buffer = "irc;foonetic.#xkcd-signal;7"
 buffer = "irc;freenode.#vim;8"
 buffer = "irc;freenode.#python;9"
-buffer = "irc;freenode.#archlinux-offtopic;10"
-buffer = "irc;freenode.#newsbeuter;11"
-buffer = "irc;rizon.#doremi;12"
-buffer = "irc;rizon.#DLQCT;13"
-buffer = "irc;foonetic.#xkcd-signal;14"
+buffer = "irc;rizon.#doremi;10"
+buffer = "irc;rizon.#DLQCT;11"
+buffer = "irc;freenode.#archlinux-offtopic;12"
+buffer = "irc;freenode.#newsbeuter;13"
+buffer = "irc;bitlbee.&bitlbee;14"
 buffer = "irc;foonetic.#curseofsteel;15"
 buffer = "irc;bitlbee.identica;16"
-buffer = "irc;bitlbee.ernst;17"
-buffer = "irc;bitlbee.daniel;18"
+buffer = "irc;freenode.#pygowave;17"
+buffer = "irc;bitlbee.stefan;18"
+buffer = "irc;bitlbee.joel_m;19"
 window = "1;0;50;0;-;-"
 window = "2;1;50;1;-;-"
 window = "3;2;50;0;-;-"
