--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -207,20 +207,25 @@ buffer = "irc;freenode.#lojban;2"
 buffer = "irc;freenode.#archlinux;3"
 buffer = "irc;oftc.#awesome;4"
 buffer = "irc;foonetic.#xkcd;5"
-buffer = "irc;oftc.#vimperator;6"
+buffer = "irc;rizon.#doremi;6"
 buffer = "irc;foonetic.#xkcd-signal;7"
-buffer = "irc;freenode.#vim;8"
-buffer = "irc;freenode.#python;9"
-buffer = "irc;rizon.#doremi;10"
-buffer = "irc;rizon.#DLQCT;11"
-buffer = "irc;freenode.#archlinux-offtopic;12"
-buffer = "irc;freenode.#newsbeuter;13"
-buffer = "irc;bitlbee.&bitlbee;14"
-buffer = "irc;foonetic.#curseofsteel;15"
+buffer = "irc;rizon.#DLQCT;8"
+buffer = "irc;bitlbee.&bitlbee;9"
+buffer = "irc;freenode.#vim;10"
+buffer = "irc;freenode.#python;11"
+buffer = "irc;foonetic.#curseofsteel;12"
+buffer = "irc;foonetic.#aegislore;13"
+buffer = "irc;freenode.#archlinux-offtopic;14"
+buffer = "irc;freenode.#newsbeuter;15"
 buffer = "irc;bitlbee.identica;16"
 buffer = "irc;freenode.#pygowave;17"
-buffer = "irc;bitlbee.stefan;18"
-buffer = "irc;bitlbee.joel_m;19"
+buffer = "irc;freenode.#vimperator;18"
+buffer = "irc;freenode.#anime;19"
+buffer = "irc;bitlbee.damy;20"
+buffer = "irc;bitlbee.cas;21"
+buffer = "irc;bitlbee.daniel;22"
+buffer = "irc;bitlbee.freek;23"
+buffer = "irc;bitlbee.joel_m;24"
 window = "1;0;50;0;-;-"
 window = "2;1;50;1;-;-"
 window = "3;2;50;0;-;-"
@@ -232,7 +237,7 @@ window = "8;6;0;0;irc;freenode.#vim"
 window = "9;1;50;1;-;-"
 window = "10;9;50;0;-;-"
 window = "11;10;0;0;irc;foonetic.#xkcd"
-window = "12;10;0;0;irc;bitlbee.&bitlbee"
+window = "12;10;0;0;irc;bitlbee.damy"
 window = "13;9;50;0;-;-"
 window = "14;13;0;0;irc;foonetic.#curseofsteel"
 window = "15;13;0;0;irc;bitlbee.identica"
