--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v0.3.0-dev
+# weechat.conf -- weechat v0.3.0-rc2
 #
 
 [debug]
@@ -204,28 +204,26 @@ buffer = "irc;server.foonetic;1"
 buffer = "irc;server.rizon;1"
 buffer = "irc;server.bitlbee;1"
 buffer = "irc;freenode.#lojban;2"
-buffer = "irc;freenode.#archlinux;3"
-buffer = "irc;oftc.#awesome;4"
-buffer = "irc;foonetic.#xkcd;5"
-buffer = "irc;rizon.#doremi;6"
-buffer = "irc;foonetic.#xkcd-signal;7"
-buffer = "irc;rizon.#DLQCT;8"
-buffer = "irc;bitlbee.&bitlbee;9"
-buffer = "irc;freenode.#vim;10"
-buffer = "irc;freenode.#python;11"
-buffer = "irc;foonetic.#curseofsteel;12"
-buffer = "irc;foonetic.#aegislore;13"
-buffer = "irc;freenode.#archlinux-offtopic;14"
-buffer = "irc;freenode.#newsbeuter;15"
-buffer = "irc;bitlbee.identica;16"
-buffer = "irc;freenode.#pygowave;17"
-buffer = "irc;freenode.#vimperator;18"
-buffer = "irc;freenode.#anime;19"
-buffer = "irc;bitlbee.damy;20"
-buffer = "irc;bitlbee.cas;21"
-buffer = "irc;bitlbee.daniel;22"
-buffer = "irc;bitlbee.freek;23"
-buffer = "irc;bitlbee.joel_m;24"
+buffer = "irc;foonetic.#xkcd;3"
+buffer = "irc;freenode.#archlinux;4"
+buffer = "irc;rizon.#doremi;5"
+buffer = "irc;oftc.#awesome;6"
+buffer = "irc;oftc.#vimpression;7"
+buffer = "irc;foonetic.#xkcd-signal;8"
+buffer = "irc;foonetic.#curseofsteel;9"
+buffer = "irc;bitlbee.&bitlbee;10"
+buffer = "irc;rizon.#DLQCT;11"
+buffer = "irc;freenode.#vim;12"
+buffer = "irc;freenode.#archlinux-offtopic;13"
+buffer = "irc;freenode.#anime;14"
+buffer = "irc;freenode.#python;15"
+buffer = "irc;freenode.#vimperator;16"
+buffer = "irc;bitlbee.eon;17"
+buffer = "irc;bitlbee.identica;18"
+buffer = "irc;bitlbee.daniel;19"
+buffer = "irc;bitlbee.joel_m;20"
+buffer = "irc;bitlbee.damy;21"
+buffer = "irc;rizon.darklordx;22"
 window = "1;0;50;0;-;-"
 window = "2;1;50;1;-;-"
 window = "3;2;50;0;-;-"
@@ -233,11 +231,11 @@ window = "4;3;0;0;irc;freenode.#archlinux"
 window = "5;3;0;0;irc;oftc.#awesome"
 window = "6;2;50;0;-;-"
 window = "7;6;0;0;irc;freenode.#archlinux-offtopic"
-window = "8;6;0;0;irc;freenode.#vim"
+window = "8;6;0;0;irc;freenode.#anime"
 window = "9;1;50;1;-;-"
 window = "10;9;50;0;-;-"
 window = "11;10;0;0;irc;foonetic.#xkcd"
-window = "12;10;0;0;irc;bitlbee.damy"
+window = "12;10;0;0;irc;bitlbee.&bitlbee"
 window = "13;9;50;0;-;-"
 window = "14;13;0;0;irc;foonetic.#curseofsteel"
 window = "15;13;0;0;irc;bitlbee.identica"
