--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -45,6 +45,7 @@ save_config_on_exit = on
 save_layout_on_exit = all
 scroll_amount = 3
 scroll_page_percent = 100
+search_text_not_found_alert = on
 set_title = on
 
 [color]
@@ -87,7 +88,6 @@ chat_time = default
 chat_time_delimiters = brown
 chat_value = cyan
 input_actions = lightgreen
-input_nick = lightcyan
 input_text_not_found = red
 nicklist_away = cyan
 nicklist_group = green
@@ -97,7 +97,6 @@ nicklist_prefix2 = lightmagenta
 nicklist_prefix3 = yellow
 nicklist_prefix4 = blue
 nicklist_prefix5 = brown
-nicklist_separator = blue
 separator = blue
 status_data_highlight = lightmagenta
 status_data_msg = yellow
@@ -204,26 +203,19 @@ buffer = "irc;server.foonetic;1"
 buffer = "irc;server.rizon;1"
 buffer = "irc;server.bitlbee;1"
 buffer = "irc;freenode.#lojban;2"
-buffer = "irc;foonetic.#xkcd;3"
-buffer = "irc;freenode.#archlinux;4"
-buffer = "irc;rizon.#doremi;5"
-buffer = "irc;oftc.#awesome;6"
-buffer = "irc;oftc.#vimpression;7"
-buffer = "irc;foonetic.#xkcd-signal;8"
+buffer = "irc;freenode.#archlinux;3"
+buffer = "irc;oftc.#awesome;4"
+buffer = "irc;foonetic.#xkcd;5"
+buffer = "irc;rizon.#doremi;6"
+buffer = "irc;foonetic.#xkcd-signal;7"
+buffer = "irc;rizon.#DLQCT;8"
 buffer = "irc;foonetic.#curseofsteel;9"
 buffer = "irc;bitlbee.&bitlbee;10"
-buffer = "irc;rizon.#DLQCT;11"
-buffer = "irc;freenode.#vim;12"
-buffer = "irc;freenode.#archlinux-offtopic;13"
-buffer = "irc;freenode.#anime;14"
-buffer = "irc;freenode.#python;15"
-buffer = "irc;freenode.#vimperator;16"
-buffer = "irc;bitlbee.eon;17"
-buffer = "irc;bitlbee.identica;18"
-buffer = "irc;bitlbee.daniel;19"
-buffer = "irc;bitlbee.joel_m;20"
-buffer = "irc;bitlbee.damy;21"
-buffer = "irc;rizon.darklordx;22"
+buffer = "irc;freenode.#vim;11"
+buffer = "irc;freenode.#archlinux-offtopic;12"
+buffer = "irc;freenode.#python;13"
+buffer = "irc;freenode.#newsbeuter;14"
+buffer = "irc;freenode.#anime;15"
 window = "1;0;50;0;-;-"
 window = "2;1;50;1;-;-"
 window = "3;2;50;0;-;-"
@@ -238,7 +230,7 @@ window = "11;10;0;0;irc;foonetic.#xkcd"
 window = "12;10;0;0;irc;bitlbee.&bitlbee"
 window = "13;9;50;0;-;-"
 window = "14;13;0;0;irc;foonetic.#curseofsteel"
-window = "15;13;0;0;irc;bitlbee.identica"
+window = "15;13;0;0;irc;server.bitlbee"
 
 [notify]
 
