Add volume/number toggles on Super+F11,F12 in awesome

--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v0.3.0-rc2
+# weechat.conf -- weechat v0.3.0-rc3
 #
 
 [debug]
@@ -204,18 +204,21 @@ buffer = "irc;server.rizon;1"
 buffer = "irc;server.bitlbee;1"
 buffer = "irc;freenode.#lojban;2"
 buffer = "irc;freenode.#archlinux;3"
-buffer = "irc;oftc.#awesome;4"
-buffer = "irc;foonetic.#xkcd;5"
-buffer = "irc;rizon.#doremi;6"
+buffer = "irc;bitlbee.&bitlbee;4"
+buffer = "irc;oftc.#awesome;5"
+buffer = "irc;foonetic.#xkcd;6"
 buffer = "irc;foonetic.#xkcd-signal;7"
-buffer = "irc;rizon.#DLQCT;8"
-buffer = "irc;foonetic.#curseofsteel;9"
-buffer = "irc;bitlbee.&bitlbee;10"
-buffer = "irc;freenode.#vim;11"
-buffer = "irc;freenode.#archlinux-offtopic;12"
-buffer = "irc;freenode.#python;13"
-buffer = "irc;freenode.#newsbeuter;14"
-buffer = "irc;freenode.#anime;15"
+buffer = "irc;foonetic.#curseofsteel;8"
+buffer = "irc;foonetic.#aegislore;9"
+buffer = "irc;rizon.#doremi;10"
+buffer = "irc;freenode.#archlinux-offtopic;11"
+buffer = "irc;freenode.#vim;12"
+buffer = "irc;freenode.#newsbeuter;13"
+buffer = "irc;freenode.#anime;14"
+buffer = "irc;freenode.#vimperator;15"
+buffer = "irc;bitlbee.joel_m;16"
+buffer = "irc;freenode.ljrbot;17"
+buffer = "irc;bitlbee.daniel;18"
 window = "1;0;50;0;-;-"
 window = "2;1;50;1;-;-"
 window = "3;2;50;0;-;-"
@@ -229,8 +232,8 @@ window = "10;9;50;0;-;-"
 window = "11;10;0;0;irc;foonetic.#xkcd"
 window = "12;10;0;0;irc;bitlbee.&bitlbee"
 window = "13;9;50;0;-;-"
-window = "14;13;0;0;irc;foonetic.#curseofsteel"
-window = "15;13;0;0;irc;server.bitlbee"
+window = "14;13;0;0;irc;foonetic.#xkcd-signal"
+window = "15;13;0;0;irc;freenode.#vim"
 
 [notify]
 
