Remove useless window 0 in main screen, don't display statusline by default.

--- a/.screenrc
+++ b/.screenrc
@@ -4,8 +4,9 @@ bind ^k
 bind L
 bind ^\
 
-# Urlview
-bind o eval 'hardcopy "/tmp/screen_hardcopy"' 'exec bash -c "urlview /tmp/screen_hardcopy"'
+# Add toggle bindings for the statusbar
+bind ^f eval "caption splitonly" "hardstatus ignore"
+bind f eval "caption always" "hardstatus alwayslastline"
 
 # Escape sequence
 escape \034\034
@@ -30,7 +31,8 @@ term screen-256color
 bell_msg ""
 
 # Statusline
-hardstatus alwayslastline '%{= G}[%{B} %M %d %{g}]%{g}[%= %{= w}%?%-Lw%?%{r}(%{W}%n*%f %t%?(%u)%?%{r})%{w}%?%+Lw%?%?%= %{g}][%{W} %c%{g} ]'
+caption splitonly
+hardstatus ignore '%{= G}[%{B} %M %d %{g}]%{g}[%= %{= w}%?%-Lw%?%{r}(%{W}%n*%f %t%?(%u)%?%{r})%{w}%?%+Lw%?%?%= %{g}][%{W} %c%{g} ]'
 activity '-'
 
 # Termcap, fix 256 colors
