--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -24,12 +24,12 @@ noremap <silent> <C-+> :set go+=Bm<CR>
 noremap <silent> <C-=> :set go-=Bm<CR>
 
 " Next/Prev Tab
-noremap <silent> gp :tabprev<CR>
-noremap <silent> gn :tabnext<CR>
+noremap gp <C-Tab>
+noremap gn <C-S-Tab>
 map gb gp
 
-noremap <silent> v :tabprev<CR>
-noremap <silent> w :tabnext<CR>
+noremap w <C-Tab>
+noremap v <C-S-Tab>
 
 noremap <silent> V :tabmove -1<CR>
 noremap <silent> W :tabmove +1<CR>
@@ -43,9 +43,6 @@ noremap <silent> <Leader>. :javas su_rate(0, false, false, false)<CR>
 noremap <silent> <Leader>s :noscript toggleperm<CR>
 noremap <silent> <Leader>S :noscript toggletemp<CR>
 noremap <silent> <Leader>t :noscript popup<CR>
-
-" Youtube play/pause
-map <silent> <Leader>p :norm p
 
 " Hint font size
 hi -append Hint font-size: 12px;
@@ -73,11 +70,21 @@ cnoremap <C-x> <Right><BS>
 cnoremap <C-j> <Down>
 cnoremap <C-k> <Up>
 
+" Hide CmdLine right after a command
+cnoremap <CR> <CR>:<Esc>
+
 " Vim editting in textareas
 set noinsertmode
 
 " F7: Search highlight toggle
 map <F7> :noh<CR>
+
+" Statusbas styling
+hi StatusLine background: #141414; color: #9FBC00; font-family: terminus; font-size: 10pt; font-weight: normal;
+hi StatusLineBroken background: #141414; color: #9FBC00; font-family: terminus; font-size: 10pt; font-weight: normal;
+hi StatusLineSecure background: #141414; color: #9FBC00; font-family: terminus; font-size: 10pt; font-weight: normal;
+hi StatusLineExtendedString background: #141414; color: #9FBC00; font-family: terminus; font-size: 10pt; font-weight: normal;
+hi CmdLine height: 0px; padding: 0px; font-family: terminus; font-size: 10pt; font-weight: normal;
 
 " Ignore body onclick
 set hinttags="//*[name()!='BODY' and @onclick or @onmouseover or @onmousedown or @onmouseup or @oncommand or @class='lk' or @class='s'] | //input[not(@type='hidden')] | //a | //area | //iframe | //textarea | //button | //select | //xhtml:*[name()!='BODY' and @onclick or @onmouseover or @onmousedown or @onmouseup or @oncommand or @class='lk' or @class='s'] | //xhtml:input[not(@type='hidden')] | //xhtml:a | //xhtml:area | //xhtml:iframe | //xhtml:textarea | //xhtml:button | //xhtml:select"
