--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -202,24 +202,25 @@ buffer = "irc;server.oftc;1"
 buffer = "irc;server.foonetic;1"
 buffer = "irc;server.rizon;1"
 buffer = "irc;server.bitlbee;1"
-buffer = "irc;freenode.#lojban;2"
-buffer = "irc;freenode.#archlinux;3"
-buffer = "irc;bitlbee.&bitlbee;4"
-buffer = "irc;oftc.#awesome;5"
+buffer = "irc;bitlbee.&bitlbee;2"
+buffer = "irc;oftc.#awesome;3"
+buffer = "irc;rizon.#doremi;4"
+buffer = "irc;freenode.#lojban;5"
 buffer = "irc;foonetic.#xkcd;6"
-buffer = "irc;foonetic.#xkcd-signal;7"
-buffer = "irc;foonetic.#curseofsteel;8"
-buffer = "irc;foonetic.#aegislore;9"
-buffer = "irc;rizon.#doremi;10"
-buffer = "irc;freenode.#archlinux-offtopic;11"
-buffer = "irc;freenode.#vim;12"
-buffer = "irc;freenode.#newsbeuter;13"
-buffer = "irc;freenode.#anime;14"
-buffer = "irc;freenode.#vimperator;15"
+buffer = "irc;foonetic.#curseofsteel;7"
+buffer = "irc;foonetic.#aegislore;8"
+buffer = "irc;freenode.#archlinux;9"
+buffer = "irc;foonetic.#xkcd-signal;10"
+buffer = "irc;freenode.#vim;11"
+buffer = "irc;freenode.#newsbeuter;12"
+buffer = "irc;freenode.#anime;13"
+buffer = "irc;freenode.#vimperator;14"
+buffer = "irc;freenode.#archlinux-offtopic;15"
+buffer = "irc;bitlbee.freek;16"
 window = "1;0;50;0;-;-"
 window = "2;1;50;1;-;-"
 window = "3;2;50;0;-;-"
-window = "4;3;0;0;irc;freenode.#archlinux"
+window = "4;3;0;0;irc;freenode.#vimperator"
 window = "5;3;0;0;irc;oftc.#awesome"
 window = "6;2;50;0;-;-"
 window = "7;6;0;0;irc;freenode.#archlinux-offtopic"
@@ -227,7 +228,7 @@ window = "8;6;0;0;irc;freenode.#anime"
 window = "9;1;50;1;-;-"
 window = "10;9;50;0;-;-"
 window = "11;10;0;0;irc;foonetic.#xkcd"
-window = "12;10;0;0;irc;bitlbee.&bitlbee"
+window = "12;10;0;0;irc;bitlbee.freek"
 window = "13;9;50;0;-;-"
 window = "14;13;0;0;irc;foonetic.#xkcd-signal"
 window = "15;13;0;0;irc;freenode.#vim"
