Add back fxs script and add new mpc scripts

--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -207,20 +207,21 @@ buffer = "irc;oftc.#awesome;3"
 buffer = "irc;rizon.#doremi;4"
 buffer = "irc;freenode.#lojban;5"
 buffer = "irc;foonetic.#xkcd;6"
-buffer = "irc;foonetic.#curseofsteel;7"
-buffer = "irc;foonetic.#aegislore;8"
+buffer = "irc;foonetic.#xkcd-signal;7"
+buffer = "irc;foonetic.#curseofsteel;8"
 buffer = "irc;freenode.#archlinux;9"
-buffer = "irc;foonetic.#xkcd-signal;10"
+buffer = "irc;foonetic.#aegislore;10"
 buffer = "irc;freenode.#vim;11"
 buffer = "irc;freenode.#newsbeuter;12"
 buffer = "irc;freenode.#anime;13"
 buffer = "irc;freenode.#vimperator;14"
 buffer = "irc;freenode.#archlinux-offtopic;15"
-buffer = "irc;bitlbee.freek;16"
+buffer = "irc;bitlbee.joel_m;16"
+buffer = "irc;bitlbee.ernst;17"
 window = "1;0;50;0;-;-"
 window = "2;1;50;1;-;-"
 window = "3;2;50;0;-;-"
-window = "4;3;0;0;irc;freenode.#vimperator"
+window = "4;3;0;0;irc;freenode.#archlinux-offtopic"
 window = "5;3;0;0;irc;oftc.#awesome"
 window = "6;2;50;0;-;-"
 window = "7;6;0;0;irc;freenode.#archlinux-offtopic"
@@ -228,10 +229,10 @@ window = "8;6;0;0;irc;freenode.#anime"
 window = "9;1;50;1;-;-"
 window = "10;9;50;0;-;-"
 window = "11;10;0;0;irc;foonetic.#xkcd"
-window = "12;10;0;0;irc;bitlbee.freek"
+window = "12;10;0;0;irc;bitlbee.joel_m"
 window = "13;9;50;0;-;-"
 window = "14;13;0;0;irc;foonetic.#xkcd-signal"
-window = "15;13;0;0;irc;freenode.#vim"
+window = "15;13;0;0;irc;bitlbee.ernst"
 
 [notify]
 
