[vimperator] Remove unused gn,gp,gb bindings

--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v0.3.0-rc3
+# weechat.conf -- weechat v0.3.1-dev
 #
 
 [debug]
@@ -34,7 +34,10 @@ paste_max_lines = 3
 prefix_action = " *"
 prefix_align = right
 prefix_align_max = 0
+prefix_align_more = on
 prefix_buffer_align = right
+prefix_buffer_align_max = 0
+prefix_buffer_align_more = on
 prefix_error = "=!="
 prefix_join = "-->"
 prefix_network = "--"
@@ -217,11 +220,12 @@ buffer = "irc;freenode.#anime;13"
 buffer = "irc;freenode.#vimperator;14"
 buffer = "irc;freenode.#archlinux-offtopic;15"
 buffer = "irc;bitlbee.joel_m;16"
-buffer = "irc;bitlbee.ernst;17"
+buffer = "irc;bitlbee.daniel;17"
+buffer = "irc;bitlbee.roy;18"
 window = "1;0;50;0;-;-"
 window = "2;1;50;1;-;-"
 window = "3;2;50;0;-;-"
-window = "4;3;0;0;irc;freenode.#archlinux-offtopic"
+window = "4;3;0;0;irc;freenode.#archlinux"
 window = "5;3;0;0;irc;oftc.#awesome"
 window = "6;2;50;0;-;-"
 window = "7;6;0;0;irc;freenode.#archlinux-offtopic"
@@ -232,7 +236,7 @@ window = "11;10;0;0;irc;foonetic.#xkcd"
 window = "12;10;0;0;irc;bitlbee.joel_m"
 window = "13;9;50;0;-;-"
 window = "14;13;0;0;irc;foonetic.#xkcd-signal"
-window = "15;13;0;0;irc;bitlbee.ernst"
+window = "15;13;0;0;irc;bitlbee.roy"
 
 [notify]
 
