[weechat] remove time from statusbar

--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -176,7 +176,7 @@ status.conditions = ""
 status.filling_left_right = vertical
 status.filling_top_bottom = horizontal
 status.hidden = off
-status.items = "[time],buffer_number+:+buffer_name,[lag],[hotlist],completion,scroll"
+status.items = "buffer_number+:+buffer_name,[lag],[hotlist],completion,scroll"
 status.position = bottom
 status.priority = 500
 status.separator = off
@@ -221,7 +221,7 @@ buffer = "irc;freenode.#vimperator;14"
 buffer = "irc;freenode.#archlinux-offtopic;15"
 buffer = "irc;bitlbee.joel_m;16"
 buffer = "irc;bitlbee.daniel;17"
-buffer = "irc;bitlbee.roy;18"
+buffer = "irc;bitlbee.ernst;18"
 window = "1;0;50;0;-;-"
 window = "2;1;50;1;-;-"
 window = "3;2;50;0;-;-"
@@ -233,10 +233,10 @@ window = "8;6;0;0;irc;freenode.#anime"
 window = "9;1;50;1;-;-"
 window = "10;9;50;0;-;-"
 window = "11;10;0;0;irc;foonetic.#xkcd"
-window = "12;10;0;0;irc;bitlbee.joel_m"
+window = "12;10;0;0;irc;bitlbee.&bitlbee"
 window = "13;9;50;0;-;-"
 window = "14;13;0;0;irc;foonetic.#xkcd-signal"
-window = "15;13;0;0;irc;bitlbee.roy"
+window = "15;13;0;0;irc;freenode.#vim"
 
 [notify]
 
