--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -207,21 +207,22 @@ buffer = "irc;server.rizon;1"
 buffer = "irc;server.bitlbee;1"
 buffer = "irc;bitlbee.&bitlbee;2"
 buffer = "irc;oftc.#awesome;3"
-buffer = "irc;rizon.#doremi;4"
-buffer = "irc;freenode.#lojban;5"
-buffer = "irc;foonetic.#xkcd;6"
-buffer = "irc;foonetic.#xkcd-signal;7"
-buffer = "irc;foonetic.#curseofsteel;8"
-buffer = "irc;freenode.#archlinux;9"
+buffer = "irc;foonetic.#xkcd;4"
+buffer = "irc;rizon.#doremi;5"
+buffer = "irc;freenode.#lojban;6"
+buffer = "irc;freenode.#archlinux;7"
+buffer = "irc;foonetic.#xkcd-signal;8"
+buffer = "irc;foonetic.#curseofsteel;9"
 buffer = "irc;foonetic.#aegislore;10"
 buffer = "irc;freenode.#vim;11"
 buffer = "irc;freenode.#newsbeuter;12"
 buffer = "irc;freenode.#anime;13"
 buffer = "irc;freenode.#vimperator;14"
 buffer = "irc;freenode.#archlinux-offtopic;15"
-buffer = "irc;bitlbee.joel_m;16"
-buffer = "irc;bitlbee.daniel;17"
-buffer = "irc;bitlbee.ernst;18"
+buffer = "irc;freenode.#python;16"
+buffer = "irc;bitlbee.sam;17"
+buffer = "irc;bitlbee.roy;18"
+buffer = "irc;bitlbee.joel_m;19"
 window = "1;0;50;0;-;-"
 window = "2;1;50;1;-;-"
 window = "3;2;50;0;-;-"
@@ -233,7 +234,7 @@ window = "8;6;0;0;irc;freenode.#anime"
 window = "9;1;50;1;-;-"
 window = "10;9;50;0;-;-"
 window = "11;10;0;0;irc;foonetic.#xkcd"
-window = "12;10;0;0;irc;bitlbee.&bitlbee"
+window = "12;10;0;0;irc;bitlbee.roy"
 window = "13;9;50;0;-;-"
 window = "14;13;0;0;irc;foonetic.#xkcd-signal"
 window = "15;13;0;0;irc;freenode.#vim"
