weechat: some updates

--- a/.weechat/irc_.conf
+++ b/.weechat/irc_.conf
@@ -1,5 +1,5 @@
 #
-# irc.conf -- weechat v0.3.0-rc2
+# irc.conf -- weechat v0.3.1-dev
 #
 
 [look]
@@ -45,6 +45,8 @@ lag_disconnect = 5
 lag_min_show = 1
 send_unknown_commands = off
 
+[ctcp]
+
 [ignore]
 ignore = *;*;^ThirtySeconds$
 ignore = *;*;^Das_Butt$
@@ -59,12 +61,12 @@ autojoin = ""
 autoreconnect = on
 autoreconnect_delay = 30
 autorejoin = off
-command = ""
+command = "/msg nickserv identify #########"
 command_delay = 0
 ipv6 = off
 local_hostname = ""
 nicks = "GGLucas,GGLucas_"
-command = "/msg nickserv identify ################"
+password = ""
 proxy = ""
 realname = "Lucas de Vries"
 ssl = off
@@ -85,7 +87,7 @@ freenode.realname
 freenode.local_hostname
 freenode.command
 freenode.command_delay
-freenode.autojoin = "#lojban,#archlinux,#archlinux-offtopic,#vim,#python,#newsbeuter,#anime,#vimperator"
+freenode.autojoin = "#lojban,#archlinux,#archlinux-offtopic,#vim,#newsbeuter,#anime,#vimperator"
 freenode.autorejoin
 oftc.addresses = "irc.oftc.net"
 oftc.proxy
@@ -131,7 +133,7 @@ rizon.nicks
 rizon.username
 rizon.realname
 rizon.local_hostname
-rizon.command = "/msg nickserv identify ############; /join #DLQCT #############"
+rizon.command = "/msg nickserv identify #########; /join #DLQCT #########"
 rizon.command_delay
 rizon.autojoin = "#doremi"
 rizon.autorejoin
