--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -219,10 +219,8 @@ buffer = "irc;freenode.#newsbeuter;12"
 buffer = "irc;freenode.#anime;13"
 buffer = "irc;freenode.#vimperator;14"
 buffer = "irc;freenode.#archlinux-offtopic;15"
-buffer = "irc;freenode.#python;16"
-buffer = "irc;bitlbee.sam;17"
-buffer = "irc;bitlbee.roy;18"
-buffer = "irc;bitlbee.joel_m;19"
+buffer = "irc;bitlbee.daniel;16"
+buffer = "irc;bitlbee.joel_m;17"
 window = "1;0;50;0;-;-"
 window = "2;1;50;1;-;-"
 window = "3;2;50;0;-;-"
@@ -234,7 +232,7 @@ window = "8;6;0;0;irc;freenode.#anime"
 window = "9;1;50;1;-;-"
 window = "10;9;50;0;-;-"
 window = "11;10;0;0;irc;foonetic.#xkcd"
-window = "12;10;0;0;irc;bitlbee.roy"
+window = "12;10;0;0;irc;bitlbee.&bitlbee"
 window = "13;9;50;0;-;-"
 window = "14;13;0;0;irc;foonetic.#xkcd-signal"
 window = "15;13;0;0;irc;freenode.#vim"
