weechat: don't use blue for nicks, add highmon and go scripts

--- a/.weechat/irc_.conf
+++ b/.weechat/irc_.conf
@@ -38,8 +38,8 @@ away_check = 0
 away_check_max_nicks = 0
 colors_receive = on
 colors_send = on
-default_msg_part = "WeeChat %v"
-default_msg_quit = "WeeChat %v"
+default_msg_part = ""
+default_msg_quit = ""
 lag_check = 60
 lag_disconnect = 5
 lag_min_show = 1
