--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -71,7 +71,7 @@ chat_nick_color06 = default
 chat_nick_color07 = lightcyan
 chat_nick_color08 = lightmagenta
 chat_nick_color09 = lightgreen
-chat_nick_color10 = blue
+chat_nick_color10 = lightblue
 chat_nick_other = cyan
 chat_nick_self = white
 chat_prefix_action = white
@@ -219,8 +219,6 @@ buffer = "irc;freenode.#newsbeuter;12"
 buffer = "irc;freenode.#anime;13"
 buffer = "irc;freenode.#vimperator;14"
 buffer = "irc;freenode.#archlinux-offtopic;15"
-buffer = "irc;bitlbee.daniel;16"
-buffer = "irc;bitlbee.joel_m;17"
 window = "1;0;50;0;-;-"
 window = "2;1;50;1;-;-"
 window = "3;2;50;0;-;-"
@@ -270,7 +268,6 @@ ctrl-U = "/input delete_beginning_of_line"
 ctrl-W = "/input delete_previous_word"
 ctrl-X = "/input delete_next_char"
 ctrl-Y = "/input clipboard_paste"
-meta-/ = "/window merge all"
 meta-0 = "/buffer 10"
 meta-1 = "/buffer 1"
 meta-2 = "/buffer 2"
@@ -332,7 +329,8 @@ meta-b = "/window page_up"
 meta-cc = "/input delete_line"
 meta-d = "/input delete_next_word"
 meta-f = "/window page_down"
-meta-g = "/input insert /buffer #; /input delete_previous_char"
+#meta-g = "/input insert /buffer #; /input delete_previous_char"
+meta-g = "/go"
 meta-h = "/window left"
 meta-j01 = "/buffer 1"
 meta-j02 = "/buffer 2"
