weechat: configure logger plugin to behave more sane

--- a/.weechat/logger.conf
+++ b/.weechat/logger.conf
@@ -8,9 +8,9 @@ backlog = 20
 [file]
 auto_log = on
 info_lines = off
-mask = "$plugin.$name.weechatlog"
+mask = "$server/$channel"
 name_lower_case = on
-path = "%h/logs/"
+path = "~/irclogs/"
 replacement_char = "_"
 time_format = "%Y-%m-%d %H:%M:%S"
 
