--- a/.mplayer/input.conf
+++ b/.mplayer/input.conf
@@ -6,12 +6,15 @@ l seek +1
 j volume +1
 k volume -1
 m mute
+a switch_audio
 
 # OSD Control
 z osd 3
 v osd 0
+s sub_select
+- sub_visibility
 
 # Control
-f vo_tullscreen
+f vo_fullscreen
 SPACE pause
 q quit
