--- a/.mplayer/config
+++ b/.mplayer/config
@@ -18,6 +18,10 @@ osdlevel=0 # Start without the osd
 # Use vdpau
 vc=ffh264vdpau,ffmpeg12vdpau,ffwmv3vdpau,ffvc1vdpau,
 
+# Language defaults
+slang=jp,jpn,eng,en,
+alang=jp,jpn,eng,en,
+
 # Outputs
 vo=vdpau
 ao=alsa
