mplayer: add subtitle delay controls

--- a/.mplayer/input.conf
+++ b/.mplayer/input.conf
@@ -11,8 +11,12 @@ a switch_audio
 # OSD Control
 z osd 3
 v osd 0
+
+# Subtitle control
 s sub_select
 - sub_visibility
+; sub_delay -0.1
+, sub_delay +0.1
 
 # Control
 f vo_fullscreen
