--- a/.rtorrent.rc
+++ b/.rtorrent.rc
@@ -1,70 +1,51 @@
-# This is an example resource file for rTorrent. Copy to
-# ~/.rtorrent.rc and enable/modify the options as needed. Remember to
-# uncomment the options you wish to enable.
 
-# Maximum and minimum number of peers to connect to per torrent.
+# Maximum connections for active torrents
 min_peers = 40
 max_peers = 120
 
-# Same as above but for seeding completed torrents (-1 = same as downloading)
+# Maximum connections for seeding torrents
 min_peers_seed = 10
 max_peers_seed = 50
 
-# Maximum number of simultanious uploads per torrent.
+# Maximum simultanious uploads per torrent
 max_uploads = 8
 
-# Global upload and download rate in KiB. "0" for unlimited.
-download_rate = 0
-upload_rate = 0
+# Download/Upload speed limits
+download_rate = 5500
+upload_rate = 75
 
-# Default directory to save the downloaded torrents.
+# Default download directory
 directory = /data/
 
-# Default session directory. Make sure you don't run multiple instance
-# of rtorrent using the same session directory. Perhaps using a
-# relative path?
+# Session directory
 session = /home/archlucas/.rtorrent_session
 
-# Watch a directory for new torrents, and stop those that have been
-# deleted.
-schedule = watch_directory,5,5,load=/home/archlucas/torrents/*.torrent
-
-# Close torrents when diskspace is low.
-schedule = low_diskspace,5,60,close_low_diskspace=100M
-
-# Stop torrents when reaching upload ratio in percent,
-# when also reaching total upload in bytes, or when
-# reaching final upload ratio in percent.
-# example: stop at ratio 2.0 with at least 200 MB uploaded, or else ratio 20.0
-#schedule = ratio,60,60,stop_on_ratio=65
-
-# Port range to use for listening.
+# Ports to use for listening
 port_range = 6881-6889
 port_random = no
 check_hash = yes
 use_udp_trackers = yes
 
-# Encryption options, set to none (default) or any combination of the following:
-# allow_incoming, try_outgoing, require, require_RC4, enable_retry, prefer_plaintext
-#
-# The example value allows incoming encrypted connections, starts unencrypted
-# outgoing connections but retries with encryption if they fail, preferring
-# plaintext to RC4 encryption after the encrypted handshake
-#
+# Always try using encryption
 encryption = allow_incoming,try_outgoing,enable_retry
 
-# Enable DHT support for trackerless torrents or when all trackers are down.
-# May be set to "disable" (completely disable DHT), "off" (do not start DHT),
-# "auto" (start and stop DHT as needed), or "on" (start DHT immediately).
-# The default is "off". For DHT to work, a session directory must be defined.
+# Use DHT when needed
+dht_port = 6881
 dht = auto
 
-# UDP port to use for DHT. 
-dht_port = 6881
-
-# Enable peer exchange (for torrents not marked private)
+# Use peer exchange
 peer_exchange = yes
 
-# Throttle rates
-download_rate = 5500
-upload_rate = 75
+# Close torrents on low disk space
+schedule = low_diskspace,5,30,close_low_diskspace=500M
+
+# Ratio handling
+ratio.enable=
+ratio.min.set=150
+ratio.max.set=200
+ratio.upload.set=100M
+
+system.method.set = group.seeding.ratio.command, d.close=
+
+# Watch directory for new torrents
+schedule = watch_directory,5,5,load=/home/archlucas/torrents/*.torrent
