mplayer: add audio delay manipulation keys

--- a/.mplayer/input.conf
+++ b/.mplayer/input.conf
@@ -1,24 +1,28 @@
-# Navigation
+## Navigation
 h seek -10
 l seek +10
 
-# Volume
+## Volume
 j volume +1
 k volume -1
 m mute
 a switch_audio
 
-# OSD Control
+## OSD Control
 z osd 3
 v osd 0
 
-# Subtitle control
+## Subtitle control
 s sub_select
 - sub_visibility
 ; sub_delay -0.1
 , sub_delay +0.1
 
-# Control
+## Audio delay control
+$ audio_delay -0.100
+& audio_delay 0.100
+
+## Control
 f vo_fullscreen
 SPACE pause
 q quit
