--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -42,6 +42,9 @@ noremap <silent> <Leader>g :gmset!<CR>
 " Show/hide the buftabbar
 noremap <silent> <A-u> :set invbuftabs<CR>
 
+" Quick buffer switch with the same mapping as in vim
+noremap <A-g> :buffer!<Space>
+
 " Hint font size
 hi -append Hint font-size: 12px;
 
